# POC

./: .gitignore  ML_Clustering_Documentation.md  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  app.py  langchain_utils.py  main.py  utils.py
backend/pages/: 1_👀​_Duplicate_Detection_Module.py  2_🤖_ml_recommendations.py  3_💀_ML_Clustering.py
