[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhi16012004",email = "bigleu88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
